--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,13 @@
 header {
   display: flex;
+  padding-left: 4.6rem;
+  margin-top: 3.1rem;
+  align-items: center;
 }
 
 .title {
   font-family: 'Nunito', sans-serif;
+  font-weight: 700;
   color: #fff;
+  margin-left: 0.8rem;
 }
