--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 }
 
 html {
-  background: url('../src/assets/images/background\ image.jpeg') no-repeat
-    center center fixed;
+  background: url('../src/assets/images/background-image.jpeg') no-repeat center
+    center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
