Install react-select, render two dropdown menus and input field. Create fetch request to Fixer currency converter API

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,10 +12,6 @@ main {
   text-align: center;
 }
 
-.form {
-  /* border: 2px solid blue; */
-}
-
 .arrows {
   width: 5rem;
 }
@@ -32,4 +28,9 @@ h1 {
   font-weight: 300;
   line-height: 100%;
   font-size: 1.75rem;
+}
+
+.inputs-form {
+  border: 2px solid red;
+  display: flex;
 }
