--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,14 +1,13 @@
-main {
-  /* border: 2px solid lime; */
+.main-container {
+  border: 2px solid lime;
   display: flex;
   flex-direction: column;
   font-family: 'Poppins', sans-serif;
-  margin-top: 8.3rem;
+  margin-top: 3rem;
   align-items: center;
 }
 
 .title-container {
-  /* border: 2px solid red; */
   text-align: center;
 }
 
@@ -21,16 +20,53 @@ h1 {
   line-height: 64%;
   font-size: 4.3rem;
   font-weight: 800;
+  margin-bottom: 2.8rem;
 }
 
 .description {
   color: #fff;
-  font-weight: 300;
   line-height: 100%;
   font-size: 1.75rem;
+  margin-bottom: 3.25rem;
 }
 
 .inputs-form {
-  border: 2px solid red;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  border-radius: 8px;
+  background-color: rgba(20, 5, 50, 0.6);
+}
+
+.convert-button-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid salmon;
+  margin-top: 2.1rem;
+  margin-bottom: 2.5rem;
+}
+
+.conversion-container {
+  /* border: 2px solid red; */
+}
+
+.rate-result {
+  font-size: 2.5rem;
+  font-weight: 800;
+  line-height: 39px;
+  color: #19ef88;
+  margin: 0;
+}
+
+small {
+  color: #fff;
 }
