--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
