--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -55,18 +55,23 @@ h1 {
 }
 
 .convert-button {
-  width: 8rem;
   border-radius: 2.8rem;
   background-color: #19ef88;
   border: none;
-  height: 3rem;
   font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
+  font-size: 1.25rem;
   color: #181a3c;
+  font-weight: 600;
+  line-height: 27px;
+  padding: 1rem;
+}
+
+.convert-button:hover {
+  background-color: #72fab9;
 }
 
 .rate-result {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   font-weight: 800;
   line-height: 39px;
   color: #19ef88;
@@ -75,4 +80,5 @@ h1 {
 
 small {
   color: #fff;
+  font-size: 0.875rem;
 }
