--- a/src/components/Inputs/Input.css
+++ b/src/components/Inputs/Input.css
@@ -3,6 +3,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 .amount-input-container {
   display: flex;
   flex-direction: column;
@@ -15,14 +16,15 @@ input::-webkit-inner-spin-button {
 }
 
 .amount-input {
-  height: 4.3rem;
+  height: 4.2rem;
   margin-right: 1.2rem;
   padding-left: 1rem;
-  width: 20rem;
+  width: 21.25rem;
   border-radius: 18px;
   border: 1px solid #463182;
   font-family: 'Nunito', sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.25rem;
+  cursor: pointer;
 }
 
 .arrows-image {
@@ -34,7 +36,17 @@ input::-webkit-inner-spin-button {
 .category-title-amount {
   color: #fff;
   margin-bottom: 0.3rem;
-  font-size: 1.1rem;
+  font-size: 1.25rem;
+}
+
+.flag-image-container {
+  display: flex;
+}
+
+.flag-image {
+  border-radius: 50%;
+  margin-right: 0.8rem;
+  object-fit: contain;
 }
 
 .image-container {
@@ -52,7 +64,7 @@ input::-webkit-inner-spin-button {
   }
 
   .arrows-image {
-    width: 4rem;
+    width: 3.125rem;
   }
 
   h1 {
