--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,9 +15,6 @@ header {
 @media only screen and (max-width: 890px) {
   header {
     padding-left: 2rem;
-  }
-
-  .description {
-    font-size: 1.5rem;
+    margin-top: 1rem;
   }
 }
