--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -7,7 +7,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 800;
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 97%;
   text-align: center;
   color: #19ef88;
@@ -24,20 +24,32 @@
   min-height: 25px;
 }
 
-@media only screen and (max-width: 890px) {
+@media only screen and (max-width: 745px) {
   header {
     padding-left: 2rem;
     margin-top: 1rem;
   }
 
+  .app-title {
+    line-height: 87%;
+    font-size: 3.5rem;
+  }
+
   .description {
     font-size: 1.5rem;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 650px) {
   .app-title {
     line-height: 87%;
+    font-size: 2.5rem;
+  }
+
+  .description {
+    font-size: 1.1rem;
+    width: 70%;
+    margin: 1rem auto 0 auto;
   }
 }
