--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,9 +12,23 @@ header {
   margin-left: 0.8rem;
 }
 
-@media only screen and (max-width: 890px) {
+/* @media only screen and (max-width: 890px) {
   header {
     padding-left: 2rem;
     margin-top: 1rem;
+  }
+} */
+
+@media only screen and (max-width: 500px) {
+  header {
+    flex-direction: column;
+    padding-left: 0;
+    margin-top: 1rem;
+    margin-bottom: 0;
+  }
+
+  .title {
+    margin-left: 0;
+    margin: 0.5rem auto 0 auto;
   }
 }
