--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -24,10 +24,21 @@
   padding-right: 2.5rem;
   border-radius: 8px;
   background-color: rgba(20, 5, 50, 0.6);
+
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 1024px) {
+  .main-container {
+    margin: 1.5rem auto 0 auto;
+  }
+  .form-container {
+    width: 98%;
+  }
 }
 
 @media only screen and (max-width: 500px) {
   .main-container {
-    margin: 1.5rem auto 0 auto;
+    margin: 0.5rem auto 0 auto;
   }
 }
