--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -3,6 +3,11 @@
 }
 
 .error-message {
-  color: red;
-  margin: 0 auto;
+  font-size: 1rem;
+  color: #e10000;
+  margin: 0 0 0 0.5rem;
+}
+
+.alert-icon {
+  color: white;
 }
