--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -4,7 +4,7 @@
 
 .app-title {
   margin: 0 auto;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 4rem;
@@ -22,6 +22,9 @@
 
 .error-message-container {
   min-height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 745px) {
